--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,15 +1,4 @@
 {
-  "datePlaceholder": "dd.mm.rrrr",
-  "legalDocument.privacyPolicy.heading": "Podmínky ochrany osobních údajů",
-  "legalDocument.privacyPolicy.link": "Ochrana osobních údajů",
-  "legalDocument.termsOfUse.heading": "Obchodní podmínky užívání FarmedBy.com",
-  "legalDocument.termsOfUse.link": "Obchodní podmínky",
-  "legalDocument.sellerTermsOfUse.heading": "Obchodní podmínky pro prodejce",
-  "legalDocument.sellerTermsOfUse.link": "Podmínky pro prodejce",
-  "legalDocument.claims.heading": "Reklamace",
-  "legalDocument.claims.link": "Reklamace",
-  "signUpPage.userConsent.text": "Registrováním souhlasím s <TermsOfUseLink>Obchodními podmínky</TermsOfUseLink> a <PrivacyPolicyLink>Podmínky ochrany osobních údajů</PrivacyPolicyLink>.",
-  "order.userConsent.text": "Odesláním objednávky souhlasím s <TermsOfUseLink>Obchodními podmínky</TermsOfUseLink> a <PrivacyPolicyLink>Podmínky ochrany osobních údajů</PrivacyPolicyLink>.",
   "aboutFarm": "O Farmě",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
@@ -23,16 +12,18 @@
   "createFarm": "Založ Farmu",
   "customer": "Zákazník",
   "dateOfCreation": "Datum vytvoření",
+  "datePlaceholder": "dd.mm.rrrr",
   "delete": "Smazat",
   "deleteDialog.text": "Smazat vybranou položku?",
   "email": "Email",
   "eshop.heading": "Eshop",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
+  "faq.heading": "Často kladené otázy",
   "farm": "Farma",
   "farmForm.isFarmPickupPoint": "Odběry ze dvora",
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
   "farmName": "Jméno farmy",
-  "farmPages.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
+  "farmPages.farmIsNotPublishedAlert": "Vaše farma není zveřejněna, tzn. že se nebude zobrazovat v seznamu farem. Změnu lze provést v nastavení farmy.",
   "farmPages.switchToAdminMode": "Správa",
   "farmPages.switchToViewMode": "Náhled", 
   "farmPickupDayDefaultValue": "Dle domluvy",
@@ -53,11 +44,20 @@
   "landingPage.workInProgress": "Na stránce se pracuje",
   "landingPage.workInProgress2": "budeme vás informovat co je nového.",
   "lastName": "Příjmení",
+  "legalDocument.claims.heading": "Reklamace",
+  "legalDocument.claims.link": "Reklamace",
+  "legalDocument.privacyPolicy.heading": "Podmínky ochrany osobních údajů",
+  "legalDocument.privacyPolicy.link": "Ochrana osobních údajů",
+  "legalDocument.sellerTermsOfUse.heading": "Obchodní podmínky pro prodejce",
+  "legalDocument.sellerTermsOfUse.link": "Podmínky pro prodejce",
+  "legalDocument.termsOfUse.heading": "Obchodní podmínky užívání FarmedBy.com",
+  "legalDocument.termsOfUse.link": "Obchodní podmínky",
   "myFarm": "Moje Farma",
   "name": "Jméno",
   "no": "Ne",
   "note": "Poznámka",
   "ok": "Ok",
+  "order": "Objednávka",
   "order.adminModeForm.completed.label" : "Objednávka dokončena",
   "order.journal.heading": "Deník objednávky",
   "order.orders.completed.heading": "Dokončené",
@@ -66,7 +66,7 @@
   "order.status.active": "Aktivní",
   "order.status.completed": "Dokončena",
   "order.status.label": "Stav",
-  "order": "Objednávka",
+  "order.userConsent.text": "Odesláním objednávky souhlasím s <TermsOfUseLink>Obchodními podmínky</TermsOfUseLink> a <PrivacyPolicyLink>Podmínky ochrany osobních údajů</PrivacyPolicyLink>.",
   "orderId": "Id objednávky",
   "orderPage.heading": "Objednávka #{{orderId}}",
   "orders": "Objednávky",
@@ -76,25 +76,25 @@
   "photoGallery.heading": "Fotogalerie",
   "pickupDayLabel": "Odběrový den",
   "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Frekvenci uveďte v poznámce objednávky.",
-  "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
-  "pickupPoint.isFarmPickupPoint.name": "Odběr z farmy",
   "pickupPoint": "Odběrové místo",
-  "pickupPoint.deliveryPeriod.week": "Týden",
-  "pickupPoint.deliveryPeriod.twoWeeks": "Dva týdny",
-  "pickupPoint.deliveryPeriod.threeWeeks": "Tři týdny",
   "pickupPoint.deliveryPeriod.fourWeeks": "Čtyři týdny",
   "pickupPoint.deliveryPeriod.label": "Frekvence závozu",
+  "pickupPoint.deliveryPeriod.threeWeeks": "Tři týdny",
+  "pickupPoint.deliveryPeriod.twoWeeks": "Dva týdny",
+  "pickupPoint.deliveryPeriod.week": "Týden",
+  "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
+  "pickupPoint.isFarmPickupPoint.name": "Odběr z farmy",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
   "postcode": "PSČ",
   "pricing": "Ceník",
   "producing": "Produkujeme",
-  "production": "Produkce",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
   "productTypes.fruits": "Ovoce",
   "productTypes.meat": "Maso",
   "productTypes.vegetables": "Zelenina",
+  "production": "Produkce",
   "reviews.heading": "Říkají o nás",
   "save": "Uložit",
   "signIn": "Přihlásit se",
@@ -108,17 +108,18 @@
   "signUpPage.heading": "Registrace",
   "signUpPage.invalidEmail": "Neplatný email.",
   "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
+  "signUpPage.userConsent.text": "Registrováním souhlasím s <TermsOfUseLink>Obchodními podmínky</TermsOfUseLink> a <PrivacyPolicyLink>Podmínky ochrany osobních údajů</PrivacyPolicyLink>.",
   "somethingWentWrong": "Něco se porouchalo",
   "sortBy": "Řadit dle",
-  "subscription.endOfSeason.label": "Konec sezóny / objednávek",
-  "subscription.endOfSeason.helperText": "Pokud zadáte datum \"Konec sezóny / objednávek\", tak se po jeho uplynutí, předplatné přestane zobrazovat zákazníkům. Zároveň pokud nebude zadán \"Maximální počet závozů\" bude datum použito k dopočítání maximální objednávky, s ohledem na současné datum a frekvenci zvoleného odběrového místa.",
-  "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů",
-  "subscription.minimumNumberOfDeliveries.label": "Minimum závozů",
   "subscription.calculator.heading": "Kalkulátor cen",
   "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
   "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
   "subscription.enableOrderForm.alert": "Přidej odběrové místo nebo povol odběry z farmy, pro zobrazení objednávkového formuláře předplatných",
+  "subscription.endOfSeason.helperText": "Pokud zadáte datum \"Konec sezóny / objednávek\", tak se po jeho uplynutí, předplatné přestane zobrazovat zákazníkům. Zároveň pokud nebude zadán \"Maximální počet závozů\" bude datum použito k dopočítání maximální objednávky, s ohledem na současné datum a frekvenci zvoleného odběrového místa.",
+  "subscription.endOfSeason.label": "Konec sezóny / objednávek",
   "subscription.journal.placeholder": "Deník slouží tobě jako farmáři, pro zaznamenávání vývoje objednávky a měl jsi tak všechny informace při přípravě odběrů na jednom místě. Zákazník deník nevidí.\n\nPříklad použití:\n22.6.2021: První závoz\n29.6.2021: Druhý závoz\n6.7.2021: Třetí závoz\n13.7.2021: Zákazník požádal o odložení závozu kvůli dovolené\n20.7.2021: Čtvrtý závoz\n...\n14.9.2021: Poslední závoz - objednávka dokončena",
+  "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů",
+  "subscription.minimumNumberOfDeliveries.label": "Minimum závozů",
   "subscription.subscriptions.heading": "Předplatné",
   "subscriptionEditor.descriptionPlaceholder": "Různá sezonní zelenina",
   "subscriptionEditor.heading": "Editor předplatného",
