--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,15 +1,4 @@
 {
-  "datePlaceholder": "mm/dd/yyyy",
-  "legalDocument.privacyPolicy.heading": "Privacy policy",
-  "legalDocument.privacyPolicy.link": "Privacy policy",
-  "legalDocument.termsOfUse.heading": "Terms of use",
-  "legalDocument.termsOfUse.link": "Terms of use",
-  "legalDocument.sellerTermsOfUse.heading": "Terms of use for sellers",
-  "legalDocument.sellerTermsOfUse.link": "Terms of use for sellers",
-  "legalDocument.claims.heading": "Claims",
-  "legalDocument.claims.link": "Claims",
-  "signUpPage.userConsent.text": "By signing up, you agree to our <TermsOfUseLink>Terms of Use</TermsOfUseLink> and <PrivacyPolicyLink>Privacy Policy</PrivacyPolicyLink>.",
-  "order.userConsent.text": "By creating an order, you agree to our <TermsOfUseLink>Terms of Use</TermsOfUseLink> and <PrivacyPolicyLink>Privacy Policy</PrivacyPolicyLink>.",
   "aboutFarm": "About Farm",
   "accommodation.heading": "Accommodation",
   "address": "Address",
@@ -23,16 +12,18 @@
   "createFarm": "Create Farm",
   "customer": "Customer",
   "dateOfCreation": "Date of creation",
+  "datePlaceholder": "mm/dd/yyyy",
   "delete": "Delete",
   "deleteDialog.text": "Delete selected item?",
   "email": "Email",
   "eshop.heading": "Eshop",
   "exampleFarmAlert": "This farm is not real it's for illustrative purposes only.",
+  "faq.heading": "FAQ",
   "farm": "Farm",
   "farmForm.isFarmPickupPoint": "Use farm as pickup point",
   "farmForm.makeFarmPublic": "Make farm public",
   "farmName": "Farm name",
-  "farmPages.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
+  "farmPages.farmIsNotPublishedAlert": "Your farm is not published, so it won't show up in farm search. You can change that in farm settings.",
   "farmPages.switchToAdminMode": "Admin",
   "farmPages.switchToViewMode": "View", 
   "farmPickupDayDefaultValue": "By agreement",
@@ -53,11 +44,20 @@
   "landingPage.workInProgress": "Site is under construction",
   "landingPage.workInProgress2": "subscribe to be updated what's new.",
   "lastName": "Last name",
+  "legalDocument.claims.heading": "Claims",
+  "legalDocument.claims.link": "Claims",
+  "legalDocument.privacyPolicy.heading": "Privacy policy",
+  "legalDocument.privacyPolicy.link": "Privacy policy",
+  "legalDocument.sellerTermsOfUse.heading": "Terms of use for sellers",
+  "legalDocument.sellerTermsOfUse.link": "Terms of use for sellers",
+  "legalDocument.termsOfUse.heading": "Terms of use",
+  "legalDocument.termsOfUse.link": "Terms of use",
   "myFarm": "My Farm",
   "name": "Name",
   "no": "No",
   "note": "Note",
   "ok": "Ok",
+  "order": "Order",
   "order.adminModeForm.completed.label" : "Order completed",
   "order.journal.heading": "Order journal",
   "order.orders.completed.heading": "Completed",
@@ -66,7 +66,7 @@
   "order.status.active": "Active",
   "order.status.completed": "Completed",
   "order.status.label": "Status",
-  "order": "Order",
+  "order.userConsent.text": "By creating an order, you agree to our <TermsOfUseLink>Terms of Use</TermsOfUseLink> and <PrivacyPolicyLink>Privacy Policy</PrivacyPolicyLink>.",
   "orderId" : "Order id",
   "orderPage.heading": "Order #{{orderId}}",
   "orders": "Orders",
@@ -76,25 +76,25 @@
   "photoGallery.heading": "Photo Gallery",
   "pickupDayLabel": "Pickup day",
   "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
-  "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
-  "pickupPoint.isFarmPickupPoint.name": "Pickup from farm",
   "pickupPoint": "Pickup point",
-  "pickupPoint.deliveryPeriod.week": "Week",
-  "pickupPoint.deliveryPeriod.twoWeeks": "Two weeks",
-  "pickupPoint.deliveryPeriod.threeWeeks": "Three weeks",
   "pickupPoint.deliveryPeriod.fourWeeks": "Four weeks",
   "pickupPoint.deliveryPeriod.label": "Delivery frequency",
+  "pickupPoint.deliveryPeriod.threeWeeks": "Three weeks",
+  "pickupPoint.deliveryPeriod.twoWeeks": "Two weeks",
+  "pickupPoint.deliveryPeriod.week": "Week",
+  "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
+  "pickupPoint.isFarmPickupPoint.name": "Pickup from farm",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
   "postcode": "Postcode",
   "pricing": "Pricing",
   "producing": "Producing",
-  "production": "Produkce",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
   "productTypes.fruits": "Fruits",
   "productTypes.meat": "Meat",
   "productTypes.vegetables": "Vegetables",
+  "production": "Produkce",
   "reviews.heading": "They say about us",
   "save": "Save",
   "signIn": "Sign in",
@@ -108,17 +108,18 @@
   "signUpPage.heading": "Sign up",
   "signUpPage.invalidEmail": "Invalid email",
   "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
+  "signUpPage.userConsent.text": "By signing up, you agree to our <TermsOfUseLink>Terms of Use</TermsOfUseLink> and <PrivacyPolicyLink>Privacy Policy</PrivacyPolicyLink>.",
   "somethingWentWrong": "Something went wrong",
   "sortBy": "Sort by",
-  "subscription.endOfSeason.label": "End of season / orders",
-  "subscription.endOfSeason.helperText": "If provided, once \"End of season\" is reached, the subscription won't be visible to customers anymore. Also if \"Maximum deliveries\" is not provided, end of season date will be used to determine the maximum possible order, considering current date and frequency of selected pickup point.",
-  "subscription.maximumNumberOfDeliveries.label": "Maximum deliveries",
-  "subscription.minimumNumberOfDeliveries.label": "Minimum deliveries",
   "subscription.calculator.heading": "Price calculator",
   "subscription.calculator.text": "Contact the farmer to place an order",
   "subscription.empty.text": "This farm hasn't got any subscriptions yet",
   "subscription.enableOrderForm.alert": "Add pickup point or set farm as pickup point to enable subscription order form",
+  "subscription.endOfSeason.helperText": "If provided, once \"End of season\" is reached, the subscription won't be visible to customers anymore. Also if \"Maximum deliveries\" is not provided, end of season date will be used to determine the maximum possible order, considering current date and frequency of selected pickup point.",
+  "subscription.endOfSeason.label": "End of season / orders",
   "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
+  "subscription.maximumNumberOfDeliveries.label": "Maximum deliveries",
+  "subscription.minimumNumberOfDeliveries.label": "Minimum deliveries",
   "subscription.subscriptions.heading": "Subscriptions",
   "subscriptionEditor.descriptionPlaceholder": "Various seasonal vegetables",
   "subscriptionEditor.heading": "Subscription editor",
