--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "developmentSiteAlert": "This is development version of the site, it is not meant to be used by the public.",
   "aboutFarm": "About Farm",
   "accommodation.heading": "Accommodation",
   "address": "Address",
