--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -29,7 +29,7 @@
   "farmPages.farmIsNotPublishedAlert": "Vaše farma není zveřejněna, tzn. že se nebude zobrazovat v seznamu farem. Změnu lze provést v nastavení farmy.",
   "farmPages.switchToAdminMode": "Správa",
   "farmPages.switchToViewMode": "Náhled", 
-  "farmPickupDayDefaultValue": "Dle domluvy",
+  "pickupPoint.pickupDayDefaultValue": "Dle domluvy",
   "farmsPage.deliversToHeading": "Odběrová místa v",
   "farmsPage.heading": "Najdi Farmu",
   "farmsPage.producingLabel": "Produkuje",
@@ -78,7 +78,7 @@
   "phoneNumber": "Telefonní číslo",
   "photoGallery.heading": "Fotogalerie",
   "pickupDayLabel": "Odběrový den",
-  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Frekvenci uveďte v poznámce objednávky.",
+  "pickupDayPlaceholder": "Čtvrtek od 10 do 16 hodin",
   "pickupPoint": "Odběrové místo",
   "pickupPoint.deliveryPeriod.fourWeeks": "Čtyři týdny",
   "pickupPoint.deliveryPeriod.label": "Frekvence závozu",
@@ -124,9 +124,9 @@
   "subscription.maximumNumberOfDeliveries.label": "Maximální počet závozů",
   "subscription.minimumNumberOfDeliveries.label": "Minimum závozů",
   "subscription.subscriptions.heading": "Předplatné",
-  "subscriptionEditor.descriptionPlaceholder": "Různá sezonní zelenina",
+  "subscriptionEditor.descriptionPlaceholder": "Sezónní zelenina dle úrody",
   "subscriptionEditor.heading": "Editor předplatného",
-  "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
+  "subscriptionEditor.namePlaceholder": "Zeleninová bedýnka pro dva",
   "subscriptionEditor.numberOfDeliveries": "Od počtu závozů",
   "subscriptionEditor.pricePerDelivery": "Cena za závoz ({{currency}})",
   "subscriptionsPage.customerData.heading": "Kontaktní údaje",
