--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -29,7 +29,7 @@
   "farmPages.farmIsNotPublishedAlert": "Your farm is not published, so it won't show up in farm search. You can change that in farm settings.",
   "farmPages.switchToAdminMode": "Admin",
   "farmPages.switchToViewMode": "View", 
-  "farmPickupDayDefaultValue": "By agreement",
+  "pickupPoint.pickupDayDefaultValue": "By agreement",
   "farmsPage.deliversToHeading": "Pickup points in",
   "farmsPage.heading": "Find Farm",
   "farmsPage.producingLabel": "Producing",
@@ -78,7 +78,7 @@
   "phoneNumber": "Phone number",
   "photoGallery.heading": "Photo Gallery",
   "pickupDayLabel": "Pickup day",
-  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
+  "pickupDayPlaceholder": "On Wednesday from 10am to 4pm",
   "pickupPoint": "Pickup point",
   "pickupPoint.deliveryPeriod.fourWeeks": "Four weeks",
   "pickupPoint.deliveryPeriod.label": "Delivery frequency",
@@ -135,7 +135,7 @@
   "subscriptionsPage.howItWorks3": "Make the payment",
   "subscriptionsPage.howItWorks4": "Wait for an email containing first delivery date",
   "subscriptionsPage.howItWorks5": "Pick up regular deliveries",
-  "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers\n\nDisliked vegetables: celery stalks, dill",
+  "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers",
   "subscriptionsPage.noteHeading": "Note (feedback)",
   "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
   "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
