--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -41,7 +41,7 @@
   "landingPage.heading": "Lokální produkty přímo z farmy",
   "landingPage.howItWorks1": "Najdi farmu",
   "landingPage.howItWorks2": "Vyber předplatné",
-  "landingPage.howItWorks3": "Čím více předplatíš tím více ušetříš",
+  "landingPage.howItWorks3": "Čím více předplatíš, tím více ušetříš",
   "landingPage.howItWorks4": "Pravidelně vyzvedávej své odběry",
   "landingPage.subscribeToNewsletter": "Přidej se",
   "landingPage.workInProgress": "Na stránce se pracuje",
