--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -21,7 +21,7 @@
   "email": "Email",
   "eshop.heading": "Eshop",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
-  "faq.heading": "Často kladené otázy",
+  "faq.heading": "Často kladené otázky",
   "farm": "Farma",
   "farmForm.isFarmPickupPoint": "Odběry ze dvora",
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
