--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -152,7 +152,7 @@
   "subscriptionsPage.subscriptionDescriptionHeading": "Popis / obsah",
   "subscriptionsPage.subscriptionName": "Jméno předplatného",
   "subscriptionsTable.numberOfDeliveriesHeading": "Počet závozů (ks)",
-  "subscriptionsTable.priceHeading": "Price",
+  "subscriptionsTable.priceHeading": "Cena",
   "subscriptionsTable.pricePerDelivery.heading": "Cena za závoz",
   "subscriptionsTable.pricingHeading": "Ceník",
   "tryItLater": "Zkuste akci opakovat později.",
