implement destroy user and farm functionality

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,9 +1,13 @@
 {
   "send": "Odeslat",
-  "credentialsChange.heading": "Přihlašovací údaje",
-  "credentialsChange.newPassword.label": "Nové heslo",
-  "credentialsChange.newEmail.label": "Nový email",
-  "credentialsChange.currentEmail.label": "Současný email",
+  "userAccount.heading": "Účet",
+  "userAccount.credentials.heading": "Přihlašovací údaje",
+  "userAccount.newPassword.label": "Nové heslo",
+  "userAccount.newEmail.label": "Nový email",
+  "userAccount.currentEmail.label": "Současný email",
+  "userAccount.deleteAccount.heading": "Pozor",
+  "userAccount.deleteAccount.button": "Smazat účet ?",
+  "userAccount.deleteAccount.text": "Smazat farmu a přihlašovací účet?",
   "developmentSiteAlert": "Toto je testovací verze aplikace a není určena pro využívání veřejností.",
   "resetPasswordDialog.heading": "Resetování hesla",
   "resetPasswordDialog.text": "Zadej email, kterým ses registroval, a pošleme ti link na resetování hesla",
@@ -13,7 +17,7 @@
   "aboutFarm": "O Farmě",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
-  "addressLevel1Label": "Okres", 
+  "addressLevel1Label": "Okres",
   "addressLine1": "Ulice a číslo popisné",
   "blog.heading": "Blog",
   "cancel": "Zrušit",
@@ -36,7 +40,7 @@
   "farmName": "Jméno farmy",
   "farmPages.farmIsNotPublishedAlert": "Vaše farma není zveřejněna, tzn. že se nebude zobrazovat v seznamu farem. Změnu lze provést v nastavení farmy.",
   "farmPages.switchToAdminMode": "Správa",
-  "farmPages.switchToViewMode": "Náhled", 
+  "farmPages.switchToViewMode": "Náhled",
   "pickupPoint.pickupDayDefaultValue": "Dle domluvy",
   "farmsPage.deliversToHeading": "Odběrová místa v",
   "farmsPage.heading": "Najdi Farmu",
@@ -69,11 +73,11 @@
   "note": "Poznámka",
   "ok": "Ok",
   "order": "Objednávka",
-  "order.adminModeForm.completed.label" : "Objednávka dokončena",
+  "order.adminModeForm.completed.label": "Objednávka dokončena",
   "order.journal.heading": "Deník objednávky",
   "order.orders.completed.heading": "Dokončené",
-  "order.sortByOrders.createdAt.label":  "Datum",
-  "order.sortByOrders.pickupPointName.label":  "Odběrové místo",
+  "order.sortByOrders.createdAt.label": "Datum",
+  "order.sortByOrders.pickupPointName.label": "Odběrové místo",
   "order.status.active": "Aktivní",
   "order.status.completed": "Dokončena",
   "order.status.label": "Stav",
@@ -143,7 +147,7 @@
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
   "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
   "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
-  "subscriptionsPage.note.placeholder": "Například dej farmáři vědět jaká je tvoje oblíbená zelenina, aby věděl, čeho pěstovat více a čeho méně.\n\nOblíbená zelenina: paprika, rajče, mrkev, salát, okurka", 
+  "subscriptionsPage.note.placeholder": "Například dej farmáři vědět jaká je tvoje oblíbená zelenina, aby věděl, čeho pěstovat více a čeho méně.\n\nOblíbená zelenina: paprika, rajče, mrkev, salát, okurka",
   "subscriptionsPage.noteHeading": "Poznámka (zpětná vazba)",
   "subscriptionsPage.selectPickupPointHeading": "Vyber odběrové místo",
   "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
