--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,10 +1,14 @@
 {
   "developmentSiteAlert": "This is development version of the site, it is not meant to be used by the public.",
   "send": "Send",
-  "credentialsChange.heading": "Login credentials",
-  "credentialsChange.newPassword.label": "New password",
-  "credentialsChange.newEmail.label": "New email",
-  "credentialsChange.currentEmail.label": "Current email",
+  "userAccount.heading": "Account",
+  "userAccount.credentials.heading": "Login credentials",
+  "userAccount.newPassword.label": "New password",
+  "userAccount.newEmail.label": "New email",
+  "userAccount.currentEmail.label": "Current email",
+  "userAccount.deleteAccount.heading": "Danger Zone",
+  "userAccount.deleteAccount.button": "Delete account ?",
+  "userAccount.deleteAccount.text": "Delete my farm and my user account?",
   "resetPasswordDialog.heading": "Password reset",
   "resetPasswordDialog.text": "Enter your registration email and we'll send you link to reset your password",
   "signInPage.forgotPassword": "Forgot password",
@@ -13,7 +17,7 @@
   "aboutFarm": "About Farm",
   "accommodation.heading": "Accommodation",
   "address": "Address",
-  "addressLevel1Label": "State / Province / District", 
+  "addressLevel1Label": "State / Province / District",
   "addressLine1": "Street and house number",
   "blog.heading": "Blog",
   "cancel": "Cancel",
@@ -36,7 +40,7 @@
   "farmName": "Farm name",
   "farmPages.farmIsNotPublishedAlert": "Your farm is not published, so it won't show up in farm search. You can change that in farm settings.",
   "farmPages.switchToAdminMode": "Admin",
-  "farmPages.switchToViewMode": "View", 
+  "farmPages.switchToViewMode": "View",
   "pickupPoint.pickupDayDefaultValue": "By agreement",
   "farmsPage.deliversToHeading": "Pickup points in",
   "farmsPage.heading": "Find Farm",
@@ -69,16 +73,16 @@
   "note": "Note",
   "ok": "Ok",
   "order": "Order",
-  "order.adminModeForm.completed.label" : "Order completed",
+  "order.adminModeForm.completed.label": "Order completed",
   "order.journal.heading": "Order journal",
   "order.orders.completed.heading": "Completed",
-  "order.sortByOrders.createdAt.label":  "Date",
-  "order.sortByOrders.pickupPointName.label":  "Pickup point",
+  "order.sortByOrders.createdAt.label": "Date",
+  "order.sortByOrders.pickupPointName.label": "Pickup point",
   "order.status.active": "Active",
   "order.status.completed": "Completed",
   "order.status.label": "Status",
   "order.userConsent.text": "By creating an order, you agree to our <TermsOfUseLink>Terms of Use</TermsOfUseLink> and <PrivacyPolicyLink>Privacy Policy</PrivacyPolicyLink>.",
-  "orderId" : "Order id",
+  "orderId": "Order id",
   "orderPage.heading": "Order #{{orderId}}",
   "orders": "Orders",
   "password": "Password",
